--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="tn.erinfa.mathquiz">
+    package="com.erinfa.mathmasti">
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -16,11 +16,11 @@
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713" />
 
-        <activity android:name="tn.erinfa.mathquiz.MainActivity"
+        <activity android:name="com.erinfa.mathmasti.MainActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         </activity>
 
-        <activity android:name="tn.erinfa.mathquiz.QuestionActivity"
+        <activity android:name="com.erinfa.mathmasti.QuestionActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,10 +29,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="tn.erinfa.mathquiz.ResultActivity"
+        <activity android:name="com.erinfa.mathmasti.ResultActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         </activity>
-        <activity android:name="tn.erinfa.mathquiz.MenuOptions"
+        <activity android:name="com.erinfa.mathmasti.MenuOptions"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -40,7 +40,7 @@
 
             </intent-filter>
         </activity>
-        <activity android:name="tn.erinfa.mathquiz.Splash"
+        <activity android:name="com.erinfa.mathmasti.Splash"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
@@ -50,26 +50,26 @@
             </intent-filter>
 
         </activity>
-        <activity android:name="tn.erinfa.mathquiz.won"
+        <activity android:name="com.erinfa.mathmasti.won"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         </activity>
 
 
         <activity
-            android:name="tn.erinfa.mathquiz.OptionsActivity"
+            android:name="com.erinfa.mathmasti.OptionsActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         </activity>
         <activity
-            android:name="tn.erinfa.mathquiz.PrivacyActivity"
+            android:name="com.erinfa.mathmasti.PrivacyActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         </activity>
         <service
-            android:name="tn.erinfa.mathquiz.BackgroundSoundService"
+            android:name="com.erinfa.mathmasti.BackgroundSoundService"
             android:enabled="true" />
     </application>
 
