--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "tn.freecode.mathquiz"
+        applicationId "com.erinfa.mathsmasti"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
