--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,17 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_1"
+        android:icon="@mipmap/ic_launcher_maths_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_1_round"
+        android:roundIcon="@mipmap/ic_launcher_maths_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MathQuiz">
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
         <activity android:name="com.erinfa.mathmasti.MainActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
